organized and labeled css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- hero section -->
     <section class="hero"></section>
 
-    <!-- page content -->
+    <!-- article content section -->
     <section class="content">
         <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -55,7 +55,7 @@
         </article>
     </section>
 
-    <!-- side panel -->
+    <!-- benefits side panel -->
     <section class="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
